--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2687,3 +2687,222 @@ section {
 .footer .footer-legal .credits a {
   color: var(--color-primary);
 }
+
+/* =============================================================================================================================================== */
+
+/*--------------------------------------------------------------
+# Theme Toggle
+--------------------------------------------------------------*/
+:root {
+  /** sunny side **/
+  --blue-background: #C2E9F6;
+  --blue-border: #72cce3;
+  --blue-color: #96dcee;
+  --yellow-background: #fffaa8;
+  --yellow-border: #f5eb71;
+  /** dark side **/
+  --indigo-background: #808fc7;
+  --indigo-border: #5d6baa;
+  --indigo-color: #6b7abb;
+  --gray-border: #e8e8ea;
+  --gray-dots: #e8e8ea;
+  /** general **/
+  --white: #fff;
+}
+.theme .background {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: var(--blue-background);
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  transition: all 250ms ease-in;
+}
+.theme .toggle--checkbox {
+  display: none;
+}
+.theme .toggle--checkbox:checked {
+  /** This will all flip from sun to moon **/
+  /** Change the label color **/
+}
+.theme .toggle--checkbox:checked ~ .background {
+  background: var(--indigo-background);
+}
+.theme .toggle--checkbox:checked + .toggle--label {
+  background: var(--indigo-color);
+  border-color: var(--indigo-border);
+  /** Change the cloud to stars **/
+  /** Change the sun into the moon **/
+  /** Show the dimples on the moon **/
+}
+.theme .toggle--checkbox:checked + .toggle--label .toggle--label-background {
+  /* left: 60px;
+  width: 5px; */
+  left: 30px;
+  width: 2px;
+}
+.theme .toggle--checkbox:checked + .toggle--label .toggle--label-background:before {
+  /* width: 5px;
+  height: 5px;
+  top: -25px; */
+  width: 2px;
+  height: 2px;
+  top: -12px;
+}
+.theme .toggle--checkbox:checked + .toggle--label .toggle--label-background:after {
+  /* width: 5px;
+  height: 5px;
+  left: -30px;
+  top: 20px; */
+  width: 2px;
+  height: 2px;
+  left: -15px;
+  top: 10px;
+}
+.theme .toggle--checkbox:checked + .toggle--label:before {
+  background: var(--white);
+  border-color: var(--gray-border);
+  animation-name: switch;
+  animation-duration: 350ms;
+  animation-fill-mode: forwards;
+}
+.theme .toggle--checkbox:checked + .toggle--label:after {
+  transition-delay: 350ms;
+  opacity: 1;
+}
+.theme .toggle--label {
+  /** Placeholder element, starting at blue **/
+  /* width: 200px;
+  height: 100px; */
+  width: 100px;
+  height: 50px;
+  background: var(--blue-color);
+  border-radius: 100px;
+  border: 5px solid var(--blue-border);
+  display: flex;
+  position: relative;
+  transition: all 350ms ease-in;
+  /** The sun cloud and moon stars **/
+  /** Sun/Moon element **/
+  /** Gray dots on the moon **/
+}
+.theme .toggle--label-background {
+  /* width: 10px;
+  height: 5px;
+  left: 135px;
+  top: 45px; */
+  width: 5px;
+  height: 2px;
+  left: 67px;
+  top: 22px;
+  border-radius: 5px;
+  position: relative;
+  background: var(--white);
+  transition: all 150ms ease-in;
+}
+.theme .toggle--label-background:before {
+  content: "";
+  position: absolute;
+  /* top: -5px;
+  width: 40px;
+  left: -20px;
+  height: 5px; */
+  top: -2px;
+  width: 20px;
+  left: -10px;
+  height: 2px;
+  border-radius: 5px;
+  background: var(--white);
+  transition: all 150ms ease-in;
+}
+.theme .toggle--label-background:after {
+  content: "";
+  position: absolute;
+  /* top: 5px;
+  width: 40px;
+  left: -10px;
+  height: 5px; */
+  top: 2px;
+  width: 20px;
+  left: -5px;
+  height: 2px;
+  border-radius: 5px;
+  background: var(--white);
+  transition: all 150ms ease-in;
+}
+.theme .toggle--label:before {
+  animation-name: reverse;
+  animation-duration: 350ms;
+  animation-fill-mode: forwards;
+  transition: all 350ms ease-in;
+  content: "";
+  /* width: 82px;
+  height: 82px;
+  border: 5px solid var(--yellow-border);
+  top: 4px;
+  left: 4px; */
+  width: 41px;
+  height: 41px;
+  border: 2px solid var(--yellow-border);
+  top: 2px;
+  left: 2px;
+  position: absolute;
+  border-radius: 41px;
+  background: var(--yellow-background);
+}
+.theme .toggle--label:after {
+  transition-delay: 0ms;
+  transition: all 250ms ease-in;
+  position: absolute;
+  content: "";
+  /* box-shadow: var(--gray-dots) -13px 0 0 2px, var(--gray-dots) -24px 14px 0 -2px;
+  left: 143px;
+  top: 23px;
+  width: 10px;
+  height: 10px; */
+  box-shadow: var(--gray-dots) -6px 0 0 2px, var(--gray-dots) -12px 7px 0 -2px;
+  left: 71px;
+  top: 11px;
+  width: 5px;
+  height: 5px;
+  background: transparent;
+  border-radius: 50%;
+  opacity: 0;
+}
+@keyframes switch {
+  0% {
+    /* left: 4px; */
+    left: 2px;
+  }
+  60% {
+    /* left: 4px; */
+    left: 2px;
+    /* width: 112px; */
+    width: 56px;
+  }
+  100% {
+    /* left: 104px;
+    width: 82px; */
+    left: 52px;
+    width: 41px;
+  }
+}
+@keyframes reverse {
+  0% {
+    /* left: 104px;
+    width: 82px; */
+    left: 52px;
+    width: 41px;
+  }
+  60% {
+    /* left: 72px; */
+    left: 36px;
+    /* width: 112px; */
+    width: 56px;
+  }
+  100% {
+    /* left: 4px; */
+    left: 2px;
+  }
+}
